8202537: CLDR33
Upgraded CLDR data to V33.

Reviewed-by: naoto